--- a/index.html
+++ b/index.html
@@ -5,21 +5,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desire 0to1</title>
+  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
   <header class="header">
-
+    <div class="container">
+      <div class="header__inner">
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">About</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">Gallery</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="logo" href="#">
+          <img src="images/header/logo.png" alt="Desire Logo">
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">Blog</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="header__btn">
+          <img src="images/header/icon_menu.svg" alt="menu icon">
+        </button>
+      </div>
+    </div>
   </header>
 
   <div class="wrapper">
     <main class="main">
-      Desire 0to1
+      main
     </main>
 
     <footer class="footer">
-
+      footer
     </footer>
   </div>
 
