--- a/index.html
+++ b/index.html
@@ -11,46 +11,126 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="container">
-      <div class="header__inner">
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">About</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Gallery</a>
-            </li>
-          </ul>
-        </nav>
-        <a class="logo" href="#">
-          <img src="images/header/logo.png" alt="Desire Logo">
-        </a>
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Blog</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </nav>
-        <button class="header__btn">
-          <img src="images/header/icon_menu.svg" alt="menu icon">
-        </button>
-      </div>
-    </div>
-  </header>
-
   <div class="wrapper">
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">About</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Gallery</a>
+              </li>
+            </ul>
+          </nav>
+          <a class="logo" href="#">
+            <img src="images/header/logo.png" alt="Desire Logo">
+          </a>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Blog</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </nav>
+          <button class="header__btn">
+            <img src="images/header/icon_menu.svg" alt="menu icon">
+          </button>
+        </div>
+      </div>
+    </header>
+
     <main class="main">
       main
     </main>
 
     <footer class="footer">
-      footer
+
+      <div class="footer__content">
+        <div class="container">
+          <div class="footer__inner">
+            <div class="footer__contacts">
+              <h6 class="footer__contacts-title">
+                Contact Us
+              </h6>
+              <p class="footer__contacts-text">
+                Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy
+              </p>
+              <a class="footer__contacts-email" href="mailto:ouremailaddress@email.com">
+                ouremailaddress@email.com
+              </a>
+              <form class="footer__form" action="">
+                <input class="footer__form-input" type="email" placeholder="Subscribe by email">
+                <button class="footer__form-btn" type="submit">Send</button>
+              </form>
+            </div>
+            <ul class="footer__social">
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="#">
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="#">
+                  Instagram
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="#">
+                  Pinterest
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="#">
+                  WhatsApp
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="#">
+                  Youtube
+                </a>
+              </li>
+            </ul>
+            <nav class="footer__menu">
+              <ul class="footer__menu-list">
+                <li class="footer__menu-item">
+                  <a class="footer__menu-link" href="#">
+                    Delivery
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a class="footer__menu-link" href="#">
+                    FAQ
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a class="footer__menu-link" href="#">
+                    Help
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a class="footer__menu-link" href="#">
+                    More About Us
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <div class="container">
+          <p class="footer__copyright-text">
+            674 Gonzales Drive. Washington, PA 15301
+          </p>
+        </div>
+      </div>
+
     </footer>
   </div>
 
