section FOOTER done

--- a/index.html
+++ b/index.html
@@ -71,28 +71,34 @@
             </div>
             <ul class="footer__social">
               <li class="footer__social-item">
+
                 <a class="footer__social-link" href="#">
-                  Facebook
+                  <img class="footer__social-icon" src="images/footer/facebook.svg" alt="Facebook icon">
+                  <span>Facebook</span>
                 </a>
               </li>
               <li class="footer__social-item">
                 <a class="footer__social-link" href="#">
-                  Instagram
+                  <img class="footer__social-icon" src="images/footer/instagram.svg" alt="Instagram icon">
+                  <span>Instagram</span>
                 </a>
               </li>
               <li class="footer__social-item">
                 <a class="footer__social-link" href="#">
-                  Pinterest
+                  <img class="footer__social-icon" src="images/footer/Pinterest.svg" alt="Pinterest icon">
+                  <span>Pinterest</span>
                 </a>
               </li>
               <li class="footer__social-item">
                 <a class="footer__social-link" href="#">
-                  WhatsApp
+                  <img class="footer__social-icon" src="images/footer/facebook.svg" alt="WhatsApp icon">
+                  <span>WhatsApp</span>
                 </a>
               </li>
               <li class="footer__social-item">
                 <a class="footer__social-link" href="#">
-                  Youtube
+                  <img class="footer__social-icon" src="images/footer/youtube.svg" alt="Youtube icon">
+                  <span>Youtube</span>
                 </a>
               </li>
             </ul>
