--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="wrapper">
+
     <header class="header">
       <div class="container">
         <div class="header__inner">
@@ -41,6 +42,24 @@
           <button class="header__btn">
             <img src="images/header/icon_menu.svg" alt="menu icon">
           </button>
+          <div class="rightside-menu rightside-menu--close">
+            <button class="rightside-menu__close">
+              <img src="images/header/icon_close.svg" alt="close button">
+            </button>
+            <div class="rightside-menu__content">
+              <a class="rightside-menu__logo" href="#">
+                <img src="images/header/logo-big.png" alt="logo">
+              </a>
+              <h4 class="rightside-menu__title">
+                Furniture for life
+              </h4>
+              <p class="rightside-menu__text">
+                Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1
+                art party microdosing, put a bird on it brooklyn
+              </p>
+              <img class="rightside-menu__image" src="images/header/green-chair.jpg" alt="">
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -50,7 +69,6 @@
     </main>
 
     <footer class="footer">
-
       <div class="footer__content">
         <div class="container">
           <div class="footer__inner">
@@ -136,8 +154,8 @@
           </p>
         </div>
       </div>
-
     </footer>
+
   </div>
 
   <script src="js/main.min.js"></script>
