section TOP done (with slider)

--- a/page.html
+++ b/page.html
@@ -65,51 +65,7 @@
     </header>
 
     <main class="main">
-
-      <section class="top">
-        <div class="top__inner">
-          <div class="top__slider">
-            <div class="top__slider-item">
-              <img class="top__slider-img" src="images/top/slider-image-yellow.png" alt="image">
-              <div class="top__slider-info">
-                <h2 class="top__slider-title">
-                  Furniture
-                  collection
-                </h2>
-                <p class="top__slider-text">
-                  Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical
-                  drinking vinegar austint
-                </p>
-              </div>
-            </div>
-            <div class="top__slider-item">
-              <img class="top__slider-img" src="images/top/slider-image-green.png" alt="image">
-              <div class="top__slider-info">
-                <h2 class="top__slider-title">
-                  Different
-                  colors
-                </h2>
-                <p class="top__slider-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, ut ad natus dicta, nulla soluta, voluptatum nobis amet sapiente reiciendis rem fuga. Ducimus, necessitatibus nostrum ut repellat hic aliquid tempora?
-                </p>
-              </div>
-            </div>
-            <div class="top__slider-item">
-              <img class="top__slider-img" src="images/top/slider-image-pink.png" alt="image">
-              <div class="top__slider-info">
-                <h2 class="top__slider-title">
-                  Premium
-                  quallity
-                </h2>
-                <p class="top__slider-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus unde dolorum dolore nostrum! Autem beatae aliquid inventore adipisci a vel labore culpa temporibus blanditiis.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
+      main
     </main>
 
     <footer class="footer">
