section NEW-COLLECTION done

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                   colors
                 </h2>
                 <p class="top__slider-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, ut ad natus dicta, nulla soluta, voluptatum nobis amet sapiente reiciendis rem fuga. Ducimus, necessitatibus nostrum ut repellat hic aliquid tempora?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, ut ad natus dicta, nulla soluta,
+                  voluptatum nobis amet sapiente reiciendis rem fuga. Ducimus, necessitatibus nostrum ut repellat hic
+                  aliquid tempora?
                 </p>
               </div>
             </div>
@@ -102,12 +104,92 @@
                   quallity
                 </h2>
                 <p class="top__slider-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus unde dolorum dolore nostrum! Autem beatae aliquid inventore adipisci a vel labore culpa temporibus blanditiis.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus unde dolorum dolore
+                  nostrum! Autem beatae aliquid inventore adipisci a vel labore culpa temporibus blanditiis.
                 </p>
               </div>
             </div>
           </div>
         </div>
+      </section>
+
+      <section class="new-collection">
+        <div class="container-fluid">
+          <div class="new-collection__title">
+            Furniture new collection
+          </div>
+          <div class="new-collection__text">
+            Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking
+            vinegar austint
+          </div>
+          <div class="collection">
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/new-collection/phone.jpg" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Sofa
+                </p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/new-collection/ladder.jpg" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Armchair
+                </p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/new-collection/armchair.jpg" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Lamp
+                </p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/new-collection/table.jpg" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Table
+                </p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/new-collection/carpet.png" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Carpet
+                </p>
+              </div>
+            </a>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="aesthetic">
+        AESTETIC
       </section>
 
     </main>
