--- a/index.html
+++ b/index.html
@@ -188,10 +188,57 @@
         </div>
       </section>
 
-      <section class="aesthetic">
-        AESTETIC
+      <section class="decor">
+        <div class="container">
+          <h2 class="decor__title">
+            Aesthetic
+            ethical drinking
+          </h2>
+          <p class="decor__text">
+            Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one drinking
+            vinegar austint
+          </p>
+        </div>
       </section>
-
+      <section class="path">
+        <div class="container">
+          <h3 class="path__title">
+            How it works
+          </h3>
+          <div class="path__items">
+            <div class="path__items-box">
+              <div class="path__item">
+                <img class="path__item-img" src="images/path/graphic_tools.svg" alt="title icon">
+                <h6 class="path__item-title">
+                  Designer Consultation
+                </h6>
+                <div class="path__item-text">
+                  Kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book.
+                  Semiotics man bun venmo viral cliche
+                </div>
+              </div>
+              <div class="path__item path__item--right">
+                <img class="path__item-img" src="images/path/sofa.svg" alt="title icon">
+                <h6 class="path__item-title">
+                  Production
+                </h6>
+                <div class="path__item-text">
+                  Everyday carry actually neutra authentic kogi shabby chic
+                </div>
+              </div>
+            </div>
+            <div class="path__item path__item--bottom">
+              <img class="path__item-img" src="images/path/measuring_tape.svg" alt="title icon">
+              <h6 class="path__item-title">
+                Measurements
+              </h6>
+              <div class="path__item-text">
+                Intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
