block GALLERY done

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
           </p>
         </div>
       </section>
+
       <section class="path">
         <div class="container">
           <h3 class="path__title">
@@ -239,6 +240,113 @@
           </div>
         </div>
       </section>
+
+      <div class="gallery">
+        <div class="container-fluid">
+          <!--using MIXITUP for gallery-->
+          <div class="gallery__buttons">
+            <button class="gallery__btn" data-filter=".category-bedroom">Bedroom furniture</button>
+            <button class="gallery__btn" data-filter=".category-living">Living room furniture</button>
+            <button class="gallery__btn" data-filter=".category-office">Office furniture</button>
+            <button class="gallery__btn" data-filter=".category-dining">Dining room futniture</button>
+            <button class="gallery__btn" data-filter=".category-chair">Chair</button>
+          </div>
+
+          <div class="gallery__inner">
+
+            <div class="gallery__items mix category-bedroom">
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/2.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/3.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/4.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/5.jpg" alt="picture">
+              </a>
+            </div>
+
+            <div class="gallery__items mix category-living">
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/6.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/7.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/8.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/9.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/10.jpg" alt="picture">
+              </a>
+            </div>
+
+            <div class="gallery__items mix category-office">
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/11.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/12.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/13.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/14.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/15.jpg" alt="picture">
+              </a>
+            </div>
+
+            <div class="gallery__items mix category-dining">
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/2.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/3.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/4.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/5.jpg" alt="picture">
+              </a>
+            </div>
+
+            <div class="gallery__items mix category-chair">
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/2.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/3.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/4.jpg" alt="picture">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__item-img" src="images/gallery/5.jpg" alt="picture">
+              </a>
+            </div>
+
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
