started doing section BLOG-BOX (added 1 blog-box__item)

--- a/index.html
+++ b/index.html
@@ -347,95 +347,128 @@
           </div>
         </div>
       </div>
-    </main>
-
-    <footer class="footer">
-      <div class="footer__content">
+<!-- ОСТАНОВИЛСЯ НА ДОБАВЛЕНИИ БЛОКОВ В BLOG-BOX__ITEMS (добавил только 1) -->
+      <section class="blog-box">
         <div class="container">
-          <div class="footer__inner">
-            <div class="footer__contacts">
-              <h6 class="footer__contacts-title">
-                Contact Us
-              </h6>
-              <p class="footer__contacts-text">
-                Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy
-              </p>
-              <a class="footer__contacts-email" href="mailto:ouremailaddress@email.com">
-                ouremailaddress@email.com
-              </a>
-              <form class="footer__form" action="">
-                <input class="footer__form-input" type="email" placeholder="Subscribe by email">
-                <button class="footer__form-btn" type="submit">Send</button>
-              </form>
-            </div>
-            <ul class="footer__social">
-              <li class="footer__social-item">
+          <h3 class="blog-box__title">
 
-                <a class="footer__social-link" href="#">
-                  <img class="footer__social-icon" src="images/footer/facebook.svg" alt="Facebook icon">
-                  <span>Facebook</span>
+          </h3>
+          <div class="blog-box__items">
+            <div class="blog-box__item">
+              <a class="blog-box__item-imagelink" href="#">
+                <img class="blog-box__item-image" src="images/blog/1.jpg" alt="blog article image">
+              </a>
+              <div class="blog-box__links">
+                <span class="blog-box__date">
+
+                </span>
+                <a class="blog-box__author" href="#">
+
+                </a>
+                <a class="blog-box__theme" href="#">
+
+                </a>
+              </div>
+              <a class="blog-box__item-titlelink" href="#">
+                <h4 class="blog-box__item-title">
+
+                </h4>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
+
+
+  <footer class="footer">
+    <div class="footer__content">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__contacts">
+            <h6 class="footer__contacts-title">
+              Contact Us
+            </h6>
+            <p class="footer__contacts-text">
+              Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy
+            </p>
+            <a class="footer__contacts-email" href="mailto:ouremailaddress@email.com">
+              ouremailaddress@email.com
+            </a>
+            <form class="footer__form" action="">
+              <input class="footer__form-input" type="email" placeholder="Subscribe by email">
+              <button class="footer__form-btn" type="submit">Send</button>
+            </form>
+          </div>
+          <ul class="footer__social">
+            <li class="footer__social-item">
+
+              <a class="footer__social-link" href="#">
+                <img class="footer__social-icon" src="images/footer/facebook.svg" alt="Facebook icon">
+                <span>Facebook</span>
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <img class="footer__social-icon" src="images/footer/instagram.svg" alt="Instagram icon">
+                <span>Instagram</span>
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <img class="footer__social-icon" src="images/footer/Pinterest.svg" alt="Pinterest icon">
+                <span>Pinterest</span>
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <img class="footer__social-icon" src="images/footer/facebook.svg" alt="WhatsApp icon">
+                <span>WhatsApp</span>
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <img class="footer__social-icon" src="images/footer/youtube.svg" alt="Youtube icon">
+                <span>Youtube</span>
+              </a>
+            </li>
+          </ul>
+          <nav class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">
+                  Delivery
                 </a>
               </li>
-              <li class="footer__social-item">
-                <a class="footer__social-link" href="#">
-                  <img class="footer__social-icon" src="images/footer/instagram.svg" alt="Instagram icon">
-                  <span>Instagram</span>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">
+                  FAQ
                 </a>
               </li>
-              <li class="footer__social-item">
-                <a class="footer__social-link" href="#">
-                  <img class="footer__social-icon" src="images/footer/Pinterest.svg" alt="Pinterest icon">
-                  <span>Pinterest</span>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">
+                  Help
                 </a>
               </li>
-              <li class="footer__social-item">
-                <a class="footer__social-link" href="#">
-                  <img class="footer__social-icon" src="images/footer/facebook.svg" alt="WhatsApp icon">
-                  <span>WhatsApp</span>
-                </a>
-              </li>
-              <li class="footer__social-item">
-                <a class="footer__social-link" href="#">
-                  <img class="footer__social-icon" src="images/footer/youtube.svg" alt="Youtube icon">
-                  <span>Youtube</span>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">
+                  More About Us
                 </a>
               </li>
             </ul>
-            <nav class="footer__menu">
-              <ul class="footer__menu-list">
-                <li class="footer__menu-item">
-                  <a class="footer__menu-link" href="#">
-                    Delivery
-                  </a>
-                </li>
-                <li class="footer__menu-item">
-                  <a class="footer__menu-link" href="#">
-                    FAQ
-                  </a>
-                </li>
-                <li class="footer__menu-item">
-                  <a class="footer__menu-link" href="#">
-                    Help
-                  </a>
-                </li>
-                <li class="footer__menu-item">
-                  <a class="footer__menu-link" href="#">
-                    More About Us
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+          </nav>
         </div>
       </div>
-      <div class="footer__copyright">
-        <div class="container">
-          <p class="footer__copyright-text">
-            674 Gonzales Drive. Washington, PA 15301
-          </p>
-        </div>
+    </div>
+    <div class="footer__copyright">
+      <div class="container">
+        <p class="footer__copyright-text">
+          674 Gonzales Drive. Washington, PA 15301
+        </p>
       </div>
-    </footer>
+    </div>
+  </footer>
 
   </div>
 
