--- a/index.html
+++ b/index.html
@@ -347,34 +347,58 @@
           </div>
         </div>
       </div>
-<!-- ОСТАНОВИЛСЯ НА ДОБАВЛЕНИИ БЛОКОВ В BLOG-BOX__ITEMS (добавил только 1) -->
+
       <section class="blog-box">
         <div class="container">
           <h3 class="blog-box__title">
-
+            More inspiration ideas in our blog
           </h3>
           <div class="blog-box__items">
+
             <div class="blog-box__item">
               <a class="blog-box__item-imagelink" href="#">
                 <img class="blog-box__item-image" src="images/blog/1.jpg" alt="blog article image">
               </a>
               <div class="blog-box__links">
                 <span class="blog-box__date">
-
+                  March 12, 2020
                 </span>
                 <a class="blog-box__author" href="#">
-
+                  by Ann Summers
                 </a>
                 <a class="blog-box__theme" href="#">
-
+                  Inrerior
                 </a>
               </div>
               <a class="blog-box__item-titlelink" href="#">
                 <h4 class="blog-box__item-title">
-
+                  Listicle actually selvage activated charcoal for the drinking vinegar
                 </h4>
               </a>
             </div>
+
+            <div class="blog-box__item">
+              <a class="blog-box__item-imagelink" href="#">
+                <img class="blog-box__item-image" src="images/blog/2.jpg" alt="blog article image">
+              </a>
+              <div class="blog-box__links">
+                <span class="blog-box__date">
+                  September 28, 2020
+                </span>
+                <a class="blog-box__author" href="#">
+                  by Finnagan Morningstar
+                </a>
+                <a class="blog-box__theme" href="#">
+                  Dining room interior
+                </a>
+              </div>
+              <a class="blog-box__item-titlelink" href="#">
+                <h4 class="blog-box__item-title">
+                  Red selfies edison bulb four dollar toast humblebrag
+                </h4>
+              </a>
+            </div>
+
           </div>
         </div>
       </section>
