added page ABOUT, BREADCRUMBS done

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desire 0to1</title>
+  <title>Desire 0to1 - About</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/style.min.css">
@@ -19,7 +19,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">About</a>
+                <a class="menu__list-link menu__list-link--active" href="#">About</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="#">Gallery</a>
@@ -65,7 +65,6 @@
     </header>
 
     <main class="main">
-
       <div class="breadcrumbs">
         <div class="container">
           <ul class="breadcrumbs__list">
@@ -79,10 +78,14 @@
                 About
               </a>
             </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="#">
+                About
+              </a>
+            </li>
           </ul>
         </div>
       </div>
-      MAIN
     </main>
 
     <footer class="footer">
