section PARTNERS on page ABOUT done, page ABOUT done

--- a/about.html
+++ b/about.html
@@ -193,6 +193,85 @@
           </div>
         </div>
       </section>
+
+      <div class="partners">
+        <div class="container-fluid">
+          <div class="partners__items">
+            <img class="partners__image" src="images/partners/1.svg" alt="images">
+            <img class="partners__image" src="images/partners/2.svg" alt="images">
+            <img class="partners__image" src="images/partners/3.svg" alt="images">
+            <img class="partners__image" src="images/partners/4.svg" alt="images">
+            <img class="partners__image" src="images/partners/5.svg" alt="images">
+          </div>
+
+          <div class="collection">
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/collection/walls.jpg" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Wallpappers
+                </p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/collection/room.jpg" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Room
+                </p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/collection/chair.jpg" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Chair
+                </p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/collection/plant.jpg" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Plant
+                </p>
+              </div>
+            </a>
+
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/collection/red-sofa.jpg" alt="image">
+              <div class="collection__info">
+                <h5 class="collection__info-title">
+                  Truffaut literally trust
+                </h5>
+                <p class="collection__info-text">
+                  Living room furntiture | Red sofa
+                </p>
+              </div>
+            </a>
+
+          </div>
+        </div>
+      </div>
+
+
+
     </main>
 
     <footer class="footer">
