added test links on pages about, gallery, index in HEADER/menu

--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
                 <a class="menu__list-link menu__list-link--active" href="#">About</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Gallery</a>
+                <a class="menu__list-link" href="gallery.html">Gallery</a>
               </li>
             </ul>
           </nav>
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img src="images/header/logo.png" alt="Desire Logo">
           </a>
           <nav class="menu">
