--- a/gallery.html
+++ b/gallery.html
@@ -70,13 +70,13 @@
         <div class="container">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">
+              <a class="breadcrumbs__link" href="index.html">
                 Home
               </a>
             </li>
             <li class="breadcrumbs__item">
               <a class="breadcrumbs__link" href="#">
-                About
+                Gallery
               </a>
             </li>
           </ul>
