started doing page CONTACT

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desire 0to1</title>
+  <title>Desire 0to1 - Gallery</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/style.min.css">
@@ -35,7 +35,7 @@
                 <a class="menu__list-link" href="#">Blog</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Contact</a>
+                <a class="menu__list-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </nav>
