--- a/contact.html
+++ b/contact.html
@@ -84,14 +84,16 @@
       </div>
 
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14996.292106053768!2d-122.42245533133162!3d37.79983307792857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f18d8c6ea7%3A0x5d7f53fb70a3a903!2zNzI1IEdyZWVuIFN0LCBTYW4gRnJhbmNpc2NvLCBDQSA5NDEzMywg0KHQqNCQ!5e0!3m2!1sru!2sua!4v1618235706415!5m2!1sru!2sua" width="100%" height="578" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14996.292106053768!2d-122.42245533133162!3d37.79983307792857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f18d8c6ea7%3A0x5d7f53fb70a3a903!2zNzI1IEdyZWVuIFN0LCBTYW4gRnJhbmNpc2NvLCBDQSA5NDEzMywg0KHQqNCQ!5e0!3m2!1sru!2sua!4v1618235706415!5m2!1sru!2sua"
+          width="100%" height="578" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
 
       <section class="contacts">
         <div class="container">
           <h3 class="contacts__title">
             Contact Us
-          </р>
+          </h3>
           <div class="contacts__content">
             <ul class="contacts__social">
               <li class="contacts__social-item">
@@ -120,7 +122,33 @@
                 </a>
               </li>
             </ul>
+            <p class="contacts__content-text">
+              Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street
+              art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack
+              normcore. Lo-fi pop-up banjo portland, echo park hammock
+            </p>
+            <div class="contacts__content-address">
+              <a class="contacts__content-tel" href="tel:+14158297934">
+                (415) 829-7934
+              </a>
+              <p class="contacts__content-street">
+                725 Green St
+              </p>
+              <p class="contacts__content-city">
+                San Francisco, California(CA), 94133
+              </p>
+            </div>
+            <a class="contacts__content-email email" href="mailto:ouremailaddress@email.com">
+              ouremailaddress@email.com
+            </a>
+            <form class="contacts__form">
+              <input class="contacts__form-input" type="text" placeholder="Your name">
+              <input class="contacts__form-input" type="email" placeholder="Your e-mail">
+              <textarea class="contacts__form-texarea" placeholder="Your message"></textarea>
+              <button class="contacts__form-btn" type="submit">Send</button>
+            </form>
           </div>
+
         </div>
       </section>
 
@@ -137,7 +165,7 @@
               <p class="footer__contacts-text">
                 Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy
               </p>
-              <a class="footer__contacts-email" href="mailto:ouremailaddress@email.com">
+              <a class="footer__contacts-email email" href="mailto:ouremailaddress@email.com">
                 ouremailaddress@email.com
               </a>
               <form class="footer__form" action="">
