section CONTACT-SLIDER done, page CONTACT done

--- a/contact.html
+++ b/contact.html
@@ -152,6 +152,222 @@
         </div>
       </section>
 
+      <div class="container-fluid">
+        <div class="contact-slider">
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/1.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/2.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/3.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/4.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/5.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/6.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/7.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/8.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/9.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/10.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/1.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/2.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/3.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/4.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/5.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/6.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/7.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/8.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/9.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/10.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/1.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/2.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/3.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/4.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/5.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/6.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/7.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/8.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/9.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+          <a class="contact-slider__link" href="#">
+            <img class="contact-slider__img" src="images/contact/10.jpg" alt="images">
+            <h5 class="contact-slider__title">
+              Truffaut literally trust
+            </h5>
+          </a>
+
+        </div>
+      </div>
+
     </main>
 
     <footer class="footer">
