--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="blog.html">Blog</a>
+                <a class="menu__list-link menu__list-link--active" href="#">Blog</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="contact.html">Contact</a>
@@ -70,13 +70,13 @@
         <div class="container">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">
+              <a class="breadcrumbs__link" href="index.html">
                 Home
               </a>
             </li>
             <li class="breadcrumbs__item">
               <a class="breadcrumbs__link" href="#">
-                About
+                Blog
               </a>
             </li>
           </ul>
