--- a/about.html
+++ b/about.html
@@ -283,7 +283,7 @@
               <p class="footer__contacts-text">
                 Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy
               </p>
-              <a class="footer__contacts-email" href="mailto:ouremailaddress@email.com">
+              <a class="footer__contacts-email email" href="mailto:ouremailaddress@email.com">
                 ouremailaddress@email.com
               </a>
               <form class="footer__form" action="">
