ASIDE in section BLOG done

--- a/blog.html
+++ b/blog.html
@@ -139,7 +139,7 @@
 
                 <ul class="recent-posts__list">
                   <li class="recent-posts__item">
-                    <a class="recent-posts__title" href="#">
+                    <a class="recent-posts__item-title" href="#">
                       Cred selfies edison bulb four dollar toast humblebrag
                     </a>
                     <span class="recent-posts__item-date">
@@ -150,7 +150,7 @@
                     </a>
                   </li>
                   <li class="recent-posts__item">
-                    <a class="recent-posts__title" href="#">
+                    <a class="recent-posts__item-title" href="#">
                       Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth
                     </a>
                     <span class="recent-posts__item-date">
@@ -161,7 +161,7 @@
                     </a>
                   </li>
                   <li class="recent-posts__item">
-                    <a class="recent-posts__title" href="#">
+                    <a class="recent-posts__item-title" href="#">
                       Cred selfies edison bulb four dollar toast humblebrag
                     </a>
                     <span class="recent-posts__item-date">
